--- a/external.css
+++ b/external.css
@@ -1,3 +1,26 @@
-body{
-    background-color: green;
+.wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 100px;
+    background: gold;
+    grid-template-columns: repeat(auto-fill, minmax(600px, 1fr));
+
+}
+.box1 {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    background-color: blue;
+}
+.box2 {
+    grid-column-start: 1;
+    grid-row-start: 3;
+    grid-row-end: 5;
+    background: yellow;
+}
+.box5{
+    grid-column-start: 2;
+    grid-column-end: 4;
+    background-color: red;
 }
